# e-learning

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/api/v1/: analytics.py  assessment.py  auth.py  content.py  curriculum.py  onboarding.py  recommendation.py  router.py  tutor.py
backend/api/websockets/: sentiment_ws.py  speech_ws.py  tutor_ws.py
backend/core/: auth.py  config.py  database.py  exceptions.py  redis_client.py
backend/db/migrations/: 001_initial_schema.sql
backend/models/: analytics.py  assessment.py  curriculum.py  user.py
backend/services/: activity_generator.py  curriculum_generator.py  speech_service.py  tutor_engine.py  video_sentiment.py
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/onboarding/: page.tsx
frontend/components/content/: ContentRenderer.tsx
frontend/components/curriculum/: CurriculumTree.tsx  SubjectCard.tsx
frontend/components/shared/: Navbar.tsx  StreamingText.tsx
frontend/components/tutor/: ChatInterface.tsx
frontend/lib/: api.ts  middleware.ts  progress.ts  supabase.ts  websocket.ts
frontend/types/: index.ts
infrastructure/docker/: backend.Dockerfile
mobile/: .env.example  App.tsx  app.json  package-lock.json  package.json
mobile/src/context/: AuthContext.tsx  ProfileContext.tsx
mobile/src/data/: subjects.ts  topics.ts
mobile/src/lib/: api.ts  storage.ts  supabase.ts  websocket.ts
mobile/src/screens/: LandingScreen.tsx  (+15 more)
(+24 files in other folders)
