[project]
name = "eduai-os-backend"
version = "0.1.0"
description = "EduAI OS — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "supabase>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "redis>=5.0.4",
    "celery[redis]>=5.4.0",
    "kafka-python>=2.0.2",
    "deepface>=0.0.93",
    "mediapipe>=0.10.14",
    "opencv-python>=4.10.0",
    "faster-whisper>=1.0.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "pandas>=2.2.2",
    "pgvector>=0.3.2",
    "neo4j>=5.21.0",
    "feast>=0.39.0",
    "python-dotenv>=1.0.1",
    "truststore>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
